--- a/src/pages/identifying-hpp.astro
+++ b/src/pages/identifying-hpp.astro
@@ -33,10 +33,17 @@ const internalNavLinks = [
             </h1>
         </div>
 
-        <div class="alp-reference-range__identify-wrapper">
-
-            <img class="asset__bg asset__bg--back" src="/assets/images/identifying-hpp/back-desktop.png" alt="">
-            <img class="asset__bg asset__bg--photos" src="/assets/images/identifying-hpp/photos-desktop.png" alt="">
+        <article class="alp-reference-range__identify-wrapper">
+            <img
+                class="asset__bg asset__bg--back"
+                src="/assets/images/identifying-hpp/back-desktop.png"
+                alt=""
+            />
+            <img
+                class="asset__bg asset__bg--photos"
+                src="/assets/images/identifying-hpp/photos-desktop.png"
+                alt=""
+            />
 
             <p class="asset__bg asset__bg--text">11A0763</p>
             <p class="asset__bg asset__bg--text">11A0763</p>
@@ -105,12 +112,58 @@ const internalNavLinks = [
                     </div>
                 </div>
             </div>
-        </div>
+        </article>
 
-        <CTA variation="variant-2" buttonLabel="View Chart" content="Look back at what constitutes low alkaline phosphatase activity" linkURL="#" bypassModal ></CTA>
+        <CTA
+            variation="variant-2"
+            buttonLabel="View Chart"
+            content="Look back at what constitutes low alkaline phosphatase activity"
+            linkURL="#"
+            bypassModal
+        />
+
+        <article class="alpd-reference-range__footext">
+            <div class="red-line footext-red-line"></div>
+            <div class="red-line footext-red-line"></div>
+
+            <div class="alpd-reference-range__footext-content">
+                <div class="wrapper">
+                    <p class="font--special-elite color--white text--center">
+                        When <span class="color--saffron-mango"
+                            >persistently low levels of alkaline phosphatase</span
+                        > intersect with a range of unexplained symptoms in other
+                        metabolic disorders, look for hypophosphatasia in new and
+                        existing patients<sup class="symbol-sup">*</sup>
+                    </p>
+                    <p class="color--white text--center">
+                        <sup class="symbol-sup">*</sup>Persistently low values
+                        may be defined as at least 2 values below normal at
+                        intervals of more than 30 days.
+                    </p>
+
+                    <br /><br /><br />
+
+                    <p class="color--white text--center font--special-elite">
+                        Any clinical sign/symptom PLUS persistently low alkaline
+                        phosphatase<sup class="symbol-sup">*</sup> is sufficient
+                        for a <span class="color--saffron-mango"
+                            >hypophosphatasia diagnosis<sup class="symbol-sup"
+                                >†</sup
+                            ></span
+                        >
+                    </p>
+                    <p class="text--center color--white">
+                        <sup class="symbol-sup">*</sup>Persistently low values may be defined as at least 2
+                        values below normal in intervals of more than 30 days. <br>
+                        <sup class="symbol-sup">†</sup>Other causes of low alkaline phosphatase should be
+                        ruled out. Not all signs and symptoms need to be present
+                        for a hypophosphatasia diagnosis.
+                    </p>
+                </div>
+            </div>
+        </article>
     </section>
 
-    
     <section class="section identifying-hpp-page__testing" id="testing">
     </section>
     <section
