--- a/src/pages/identifying-hpp.astro
+++ b/src/pages/identifying-hpp.astro
@@ -123,27 +123,27 @@ const internalNavLinks = [
         />
 
         <article class="alpd-reference-range__footext">
-            <div class="red-line footext-red-line"></div>
-            <div class="red-line footext-red-line"></div>
+            <div class="red-string footext-red-line"></div>
+            <div class="red-string footext-red-line"></div>
 
             <div class="alpd-reference-range__footext-content">
                 <div class="wrapper">
-                    <p class="font--special-elite color--white text--center">
+                    <p class="font--special-elite color--white text--center footext-1">
                         When <span class="color--saffron-mango"
                             >persistently low levels of alkaline phosphatase</span
                         > intersect with a range of unexplained symptoms in other
                         metabolic disorders, look for hypophosphatasia in new and
                         existing patients<sup class="symbol-sup">*</sup>
                     </p>
-                    <p class="color--white text--center">
+                    <br>
+                    <p class="color--white text--center footext-2">
                         <sup class="symbol-sup">*</sup>Persistently low values
                         may be defined as at least 2 values below normal at
                         intervals of more than 30 days.
                     </p>
 
-                    <br /><br /><br />
 
-                    <p class="color--white text--center font--special-elite">
+                    <p class="color--white text--center font--special-elite footext-3">
                         Any clinical sign/symptom PLUS persistently low alkaline
                         phosphatase<sup class="symbol-sup">*</sup> is sufficient
                         for a <span class="color--saffron-mango"
@@ -152,7 +152,8 @@ const internalNavLinks = [
                             ></span
                         >
                     </p>
-                    <p class="text--center color--white">
+                    <br>
+                    <p class="text--center color--white footext-4">
                         <sup class="symbol-sup">*</sup>Persistently low values may be defined as at least 2
                         values below normal in intervals of more than 30 days. <br>
                         <sup class="symbol-sup">†</sup>Other causes of low alkaline phosphatase should be
