Add Custom CSS to hide Cookie Banner

--- a/src/pages/validate.astro
+++ b/src/pages/validate.astro
@@ -31,3 +31,8 @@ import "../styles/components/_validate.scss";
     </div>
   </section>
 </Layout>
+<style is:global>
+  .cookie {
+    display: none;
+  }
+</style>
