Update showISI prop to be false by default

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const {
   title,
   pageClass,
   showHeader = true,
-  showISI = true,
+  showISI = false,
   showFooter = true,
 } = Astro.props;
 ---
