--- a/src/styles/components/_patient-case-file.scss
+++ b/src/styles/components/_patient-case-file.scss
@@ -25,7 +25,7 @@
     z-index: 1;
 
     @media screen and (min-width: 600px) {
-      background-image: url('/assets/images/case-files/patient-case-file-bg-2x.png');
+      // background-image: url('/assets/images/case-files/patient-case-file-bg-2x.png');
     }
   }
 
